--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -1,12 +1,14 @@
 ---
 title: Guide Documents > Runtime Validators > assert() functions
 ---
+import Alert from "@mui/material/Alert";
+import AlertTitle from "@mui/material/AlertTitle";
+import { Tabs } from "nextra/components";
 
-import { Tabs } from 'nextra/components'
-import Alert from '@mui/material/Alert';
-import AlertTitle from '@mui/material/AlertTitle';
+import RemoteSource from "../../../src/components/RemoteSource";
 
 ## `assert()` function
+
 <Tabs items={[
   <code>typia</code>, 
   <code>TypeGuardError.ts</code>,
@@ -57,179 +59,21 @@ Yeah, `typia` needs only pure TypeScript type. As `typia` is a compiler library,
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/assert.ts" showLineNumbers
-import typia, { tags } from "typia";
-import { v4 } from "uuid";
-
-typia.assert<IMember>({
-  id: v4(),
-  email: "samchon.github@gmail.com",
-  age: 18, // wrong, must be greater than 19
-});
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/assert.ts" 
+      filename="examples/src/validators/assert.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/assert.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
-import typia from "typia";
-import { v4 } from "uuid";
-(() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _ao0 = (input, _path, _exceptionable = true) =>
-    (("string" === typeof input.id &&
-      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        },
-        _errorFactory,
-      )) &&
-    (("string" === typeof input.email &&
-      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        },
-        _errorFactory,
-      )) &&
-    (("number" === typeof input.age &&
-      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (19 < input.age ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (input.age <= 100 ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        },
-        _errorFactory,
-      ));
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let _errorFactory;
-  return (input, errorFactory) => {
-    if (false === __is(input)) {
-      _errorFactory = errorFactory;
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          __typia_transform__assertGuard._assertGuard(
-            true,
-            {
-              method: "typia.assert",
-              path: _path + "",
-              expected: "IMember",
-              value: input,
-            },
-            _errorFactory,
-          )) &&
-          _ao0(input, _path + "", true)) ||
-        __typia_transform__assertGuard._assertGuard(
-          true,
-          {
-            method: "typia.assert",
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          },
-          _errorFactory,
-        ))(input, "$input", true);
-    }
-    return input;
-  };
-})()({
-  id: v4(),
-  email: "samchon.github@gmail.com",
-  age: 18, // wrong, must be greater than 19
-});
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/assert.js" 
+      filename="examples/bin/validators/assert.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## `assertEquals()` function
+
 <Tabs items={[
   <code>typia</code>, 
   <code>TypeGuardError.ts</code>,
@@ -261,185 +105,25 @@ In the below example case, as `sex` property is not defined in the `IMember` typ
   - `method`: `typia.assertEquals()`
   - `path`: `input.sex`
   - `value`: `1`,
-  ` expected`: `undefined`
+  - `expected`: `undefined`
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/assert.ts" showLineNumbers
-import typia, { tags } from "typia";
-import { v4 } from "uuid";
-
-typia.assert<IMember>({
-  id: v4(),
-  email: "samchon.github@gmail.com",
-  age: 30,
-  sex: 1, // extra
-});
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/assertEquals.ts" 
+      filename="examples/src/validators/assertEquals.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/assertEquals.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
-import typia from "typia";
-import { v4 } from "uuid";
-(() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _ao0 = (input, _path, _exceptionable = true) =>
-    (("string" === typeof input.id &&
-      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        },
-        _errorFactory,
-      )) &&
-    (("string" === typeof input.email &&
-      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        },
-        _errorFactory,
-      )) &&
-    (("number" === typeof input.age &&
-      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (19 < input.age ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (input.age <= 100 ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.assert",
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.assert",
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        },
-        _errorFactory,
-      ));
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let _errorFactory;
-  return (input, errorFactory) => {
-    if (false === __is(input)) {
-      _errorFactory = errorFactory;
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          __typia_transform__assertGuard._assertGuard(
-            true,
-            {
-              method: "typia.assert",
-              path: _path + "",
-              expected: "IMember",
-              value: input,
-            },
-            _errorFactory,
-          )) &&
-          _ao0(input, _path + "", true)) ||
-        __typia_transform__assertGuard._assertGuard(
-          true,
-          {
-            method: "typia.assert",
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          },
-          _errorFactory,
-        ))(input, "$input", true);
-    }
-    return input;
-  };
-})()({
-  id: v4(),
-  email: "samchon.github@gmail.com",
-  age: 30,
-  sex: 1, // extra
-});
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/assertEquals.js" 
+      filename="examples/bin/validators/assertEquals.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## `assertGuard()` functions
+
 <Tabs items={[
     <code>typia</code>, 
     <code>TypeGuardError.ts</code>,
@@ -475,27 +159,13 @@ Such similarities and differences of `typia.assertGuard<T>()` and [`typia.assert
 
 Look at the below code, then you may understand what the "Assertion Guard" means.
 
-```typescript showLineNumbers filename="examples/src/assertGuard.ts"
-import typia from "typia";
-
-interface IPoint {
-  x: number;
-  y: number;
-}
-const input: unknown = { x: 1, y: 2 };
-
-// PERFORM THE ASSERTION GUARD
-typia.assertGuard<IPoint>(input);
-
-// FROM NOW ON, "input" IS THE "IPoint" TYPE
-input.x; // OK
-input.y; // OK
-```
-
-
-
+<RemoteSource 
+  url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/assertGuard.ts" 
+  filename="examples/src/validators/validatorassertGuard.ts" 
+  showLineNumbers />
 
 ## Reusable functions
+
 <Tabs items={[
   <code>typia</code>, 
   <code>TypeGuardError.ts</code>,
@@ -535,162 +205,16 @@ Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/createAssert.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-export const assertMember = typia.createAssert<IMember>();
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/createAssert.ts" 
+      filename="examples/src/validators/createAssert.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/createAssert.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
-import typia from "typia";
-export const assertMember = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _ao0 = (input, _path, _exceptionable = true) =>
-    (("string" === typeof input.id &&
-      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        },
-        _errorFactory,
-      )) &&
-    (("string" === typeof input.email &&
-      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        },
-        _errorFactory,
-      )) &&
-    (("number" === typeof input.age &&
-      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (19 < input.age ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          },
-          _errorFactory,
-        )) &&
-      (input.age <= 100 ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        },
-        _errorFactory,
-      ));
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let _errorFactory;
-  return (input, errorFactory) => {
-    if (false === __is(input)) {
-      _errorFactory = errorFactory;
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          __typia_transform__assertGuard._assertGuard(
-            true,
-            {
-              method: "typia.createAssert",
-              path: _path + "",
-              expected: "IMember",
-              value: input,
-            },
-            _errorFactory,
-          )) &&
-          _ao0(input, _path + "", true)) ||
-        __typia_transform__assertGuard._assertGuard(
-          true,
-          {
-            method: "typia.createAssert",
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          },
-          _errorFactory,
-        ))(input, "$input", true);
-    }
-    return input;
-  };
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/createAssert.js" 
+      filename="examples/bin/validators/createAssert.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
@@ -703,26 +227,15 @@ Be careful when using `typia.createAssertGuard<T>()` or `typia.createAssertGuard
 
 When calling those functions, you've to declare the variable type explicit on the caller variable. If you don't do it, so that the caller variables come the implicit function type, TypeScript compiler throws an error like below. This is a special limitation of TypeScript compiler about the "Assertion Guard".
 
-```typescript showLineNumbers filename="examples/src/createAssertGuard.ts"
-import typia, { AssertionGuard } from "typia";
-
-//MUST DECLARE THE VARIABLE TYPE
-const explicit: AssertionGuard<number> = typia.createAssertGuard<number>();
-
-// IF NOT, COMPILATION ERROR BE OCCURRED
-const implicit = typia.createAssertGuard<number>();
-```
-
-```bash
-Assertions require every name in the call target to be declared with an explicit type annotation.
-```
+<RemoteSource 
+  url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/createAssertGuard.ts" 
+  filename="examples/src/validators/createAssertGuard.ts" 
+  showLineNumbers />
 
 </Alert>
 
-
-
-
 ## Restrictions
+
 `typia.assert<T>()` function does not check `function` and user-defined `class` types. 
 
 It validates only the primitive properties. Therefore, `typia.assert<T>()` function does not perform the `instanceof ClassName` for user-defined classes. If you want to validate the user-defined class type in addition to the property types, do it by yourself. Also, `typia.assert<T>()` function does not validate the function type either, unless configuring `functional` property of `plugin` option in the `tsconfig.json` file.
@@ -748,37 +261,21 @@ Therefore, the `instanceof` statement does not be used only for the user-defined
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/is-map.ts" showLineNumbers
-import typia from "typia";
-
-typia.createIs<Map<string, boolean | number | string>>();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/is-map.ts" 
+      filename="examples/src/validators/is-map.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/is-map.js" showLineNumbers
-import typia from "typia";
-(() => {
-  return (input) =>
-    input instanceof Map &&
-    (() =>
-      [...input].every(
-        (elem) =>
-          Array.isArray(elem) &&
-          elem.length === 2 &&
-          "string" === typeof elem[0] &&
-          ("string" === typeof elem[1] ||
-            "number" === typeof elem[1] ||
-            "boolean" === typeof elem[1]),
-      ))();
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/is-map.js" 
+      filename="examples/bin/validators/is-map.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Customization
+
 You can enhance validation logic by special tags.
 
 Also, with those tags, you can add your custom validation logic, too.
@@ -793,171 +290,21 @@ If you want to know about such special tags detaily, read below article:
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/assert-custom-tags.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-export const assertSomething = typia.createAssert<Something>();
-
-//----
-// DEFINE CUSTOM TYPE TAGS
-//----
-type Dollar = tags.TagBase<{
-  kind: "dollar";
-  target: "string";
-  value: undefined;
-  validate: `$input[0] === "$" && !isNaN(Number($input.substring(1).split(",").join("")))`;
-}>;
-
-type Postfix<Value extends string> = tags.TagBase<{
-  kind: "postfix";
-  target: "string";
-  value: Value;
-  validate: `$input.endsWith("${Value}")`;
-}>;
-
-type IsEven<Value extends number | bigint> = tags.TagBase<{
-  kind: "isEven";
-  target: Value extends number ? "number" : "bigint";
-  value: undefined;
-  validate: `$input % ${Numeric<2>} === ${Numeric<0>}`;
-}>;
-
-type Numeric<Value extends number | bigint> = Value extends number
-  ? Value
-  : `BigInt(${Value})`;
-
-//----
-// VALIDATION
-//----
-interface Something {
-  dollar: string & Dollar;
-  postfix: string & Postfix<"!!!">;
-  isEven: number & IsEven<number>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/assert-custom-tags.ts" 
+      filename="examples/src/validators/assert-custom-tags.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/assert-custom-tags.js" showLineNumbers
-import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
-import typia from "typia";
-export const assertSomething = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.dollar &&
-    input.dollar[0] === "$" &&
-    !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
-    "string" === typeof input.postfix &&
-    input.postfix.endsWith("!!!") &&
-    "number" === typeof input.isEven &&
-    input.isEven % 2 === 0;
-  const _ao0 = (input, _path, _exceptionable = true) =>
-    (("string" === typeof input.dollar &&
-      ((input.dollar[0] === "$" &&
-        !isNaN(Number(input.dollar.substring(1).split(",").join("")))) ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".dollar",
-            expected: "string & Dollar",
-            value: input.dollar,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".dollar",
-          expected: "(string & Dollar)",
-          value: input.dollar,
-        },
-        _errorFactory,
-      )) &&
-    (("string" === typeof input.postfix &&
-      (input.postfix.endsWith("!!!") ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".postfix",
-            expected: 'string & Postfix<"!!!">',
-            value: input.postfix,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".postfix",
-          expected: '(string & Postfix<"!!!">)',
-          value: input.postfix,
-        },
-        _errorFactory,
-      )) &&
-    (("number" === typeof input.isEven &&
-      (input.isEven % 2 === 0 ||
-        __typia_transform__assertGuard._assertGuard(
-          _exceptionable,
-          {
-            method: "typia.createAssert",
-            path: _path + ".isEven",
-            expected: "number & IsEven<number>",
-            value: input.isEven,
-          },
-          _errorFactory,
-        ))) ||
-      __typia_transform__assertGuard._assertGuard(
-        _exceptionable,
-        {
-          method: "typia.createAssert",
-          path: _path + ".isEven",
-          expected: "(number & IsEven<number>)",
-          value: input.isEven,
-        },
-        _errorFactory,
-      ));
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let _errorFactory;
-  return (input, errorFactory) => {
-    if (false === __is(input)) {
-      _errorFactory = errorFactory;
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          __typia_transform__assertGuard._assertGuard(
-            true,
-            {
-              method: "typia.createAssert",
-              path: _path + "",
-              expected: "Something",
-              value: input,
-            },
-            _errorFactory,
-          )) &&
-          _ao0(input, _path + "", true)) ||
-        __typia_transform__assertGuard._assertGuard(
-          true,
-          {
-            method: "typia.createAssert",
-            path: _path + "",
-            expected: "Something",
-            value: input,
-          },
-          _errorFactory,
-        ))(input, "$input", true);
-    }
-    return input;
-  };
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/assert-custom-tags.js" 
+      filename="examples/bin/validators/assert-custom-tags.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Performance
+
 Super-fast and super-safe.
 
 Comparing `typia.assert<T>()` function with other competitive libraries, maximum 20,000x faster. 
