--- a/website/pages/docs/validators/validate.mdx
+++ b/website/pages/docs/validators/validate.mdx
@@ -1,11 +1,14 @@
 ---
 title: Guide Documents > Runtime Validators > validate() functions
 ---
-import { Tabs } from 'nextra/components'
-import Alert from '@mui/material/Alert';
-import AlertTitle from '@mui/material/AlertTitle';
+import Alert from "@mui/material/Alert";
+import AlertTitle from "@mui/material/AlertTitle";
+import { Tabs } from "nextra/components";
+
+import RemoteSource from "../../../src/components/RemoteSource";
 
 ## `validate()` function
+
 <Tabs items={[
   <code>typia</code>, 
   <code>IValidation.ts</code>,
@@ -71,144 +74,21 @@ Yeah, `typia` needs only pure TypeScript type. As `typia` is a compiler library,
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/validate.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-const res: typia.IValidation<IMember> = typia.validate<IMember>({
-  id: 5, // wrong, must be string (uuid)
-  age: 20.75, // wrong, not integer
-  email: "samchon.github@gmail.com",
-});
-
-if (!res.success) console.log(res.errors);
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/validate.ts" 
+      filename="examples/src/validators/validate.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/validate.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__validateReport from "typia/lib/internal/_validateReport.js";
-import typia from "typia";
-const res = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _vo0 = (input, _path, _exceptionable = true) =>
-    [
-      ("string" === typeof input.id &&
-        (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-          $report(_exceptionable, {
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        }),
-      ("string" === typeof input.email &&
-        (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-          $report(_exceptionable, {
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        }),
-      ("number" === typeof input.age &&
-        (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          })) &&
-        (19 < input.age ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          })) &&
-        (input.age <= 100 ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        }),
-    ].every((flag) => flag);
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let errors;
-  let $report;
-  return (input) => {
-    if (false === __is(input)) {
-      errors = [];
-      $report = __typia_transform__validateReport._validateReport(errors);
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          $report(true, {
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          })) &&
-          _vo0(input, _path + "", true)) ||
-        $report(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        }))(input, "$input", true);
-      const success = 0 === errors.length;
-      return {
-        success,
-        errors,
-        data: success ? input : undefined,
-      };
-    }
-    return {
-      success: true,
-      errors: [],
-      data: input,
-    };
-  };
-})()({
-  id: 5, // wrong, must be string (uuid)
-  age: 20.75, // wrong, not integer
-  email: "samchon.github@gmail.com",
-});
-if (!res.success) console.log(res.errors);
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/validate.js" 
+      filename="examples/bin/validators/validate.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## `validateEquals()` function
+
 <Tabs items={[
   <code>typia</code>, 
   <code>IValidation.ts</code>,
@@ -259,173 +139,21 @@ In the below example case, as `id` property is different with its type definitio
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/validateEquals.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-const res: typia.IValidation<IMember> = typia.validateEquals<IMember>({
-  age: 30,
-  email: "samchon.github@gmail.com",
-  id: "something", // wrong, must be string (uuid)
-  sex: 1, // extra property
-});
-
-if (!res.success) console.log(res.errors);
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/validateEquals.ts" 
+      filename="examples/src/validators/validateEquals.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/validateEquals.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__accessExpressionAsString from "typia/lib/internal/_accessExpressionAsString.js";
-import * as __typia_transform__validateReport from "typia/lib/internal/_validateReport.js";
-import typia from "typia";
-const res = (() => {
-  const _io0 = (input, _exceptionable = true) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100 &&
-    (3 === Object.keys(input).length ||
-      Object.keys(input).every((key) => {
-        if (["id", "email", "age"].some((prop) => key === prop)) return true;
-        const value = input[key];
-        if (undefined === value) return true;
-        return false;
-      }));
-  const _vo0 = (input, _path, _exceptionable = true) =>
-    [
-      ("string" === typeof input.id &&
-        (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-          $report(_exceptionable, {
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        }),
-      ("string" === typeof input.email &&
-        (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-          $report(_exceptionable, {
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        }),
-      ("number" === typeof input.age &&
-        (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          })) &&
-        (19 < input.age ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          })) &&
-        (input.age <= 100 ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        }),
-      3 === Object.keys(input).length ||
-        false === _exceptionable ||
-        Object.keys(input)
-          .map((key) => {
-            if (["id", "email", "age"].some((prop) => key === prop))
-              return true;
-            const value = input[key];
-            if (undefined === value) return true;
-            return $report(_exceptionable, {
-              path:
-                _path +
-                __typia_transform__accessExpressionAsString._accessExpressionAsString(
-                  key,
-                ),
-              expected: "undefined",
-              value: value,
-            });
-          })
-          .every((flag) => flag),
-    ].every((flag) => flag);
-  const __is = (input, _exceptionable = true) =>
-    "object" === typeof input && null !== input && _io0(input, true);
-  let errors;
-  let $report;
-  return (input) => {
-    if (false === __is(input)) {
-      errors = [];
-      $report = __typia_transform__validateReport._validateReport(errors);
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          $report(true, {
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          })) &&
-          _vo0(input, _path + "", true)) ||
-        $report(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        }))(input, "$input", true);
-      const success = 0 === errors.length;
-      return {
-        success,
-        errors,
-        data: success ? input : undefined,
-      };
-    }
-    return {
-      success: true,
-      errors: [],
-      data: input,
-    };
-  };
-})()({
-  age: 30,
-  email: "samchon.github@gmail.com",
-  id: "something", // wrong, must be string (uuid)
-  sex: 1, // extra property
-});
-if (!res.success) console.log(res.errors);
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/validateEquals.js" 
+      filename="examples/bin/validators/validateEquals.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Reusable functions
+
 <Tabs items={[
   <code>typia</code>, 
   <code>IValidation.ts</code>,
@@ -467,133 +195,21 @@ Just look at the code below, then you may understand how to use it.
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/createValidate.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-export const validateMember = typia.createValidate<IMember>();
-
-interface IMember {
-  id: string & tags.Format<"uuid">;
-  email: string & tags.Format<"email">;
-  age: number &
-    tags.Type<"uint32"> &
-    tags.ExclusiveMinimum<19> &
-    tags.Maximum<100>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/createValidate.ts" 
+      filename="examples/src/validators/createValidate.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/createValidate.js" showLineNumbers
-import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
-import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
-import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
-import * as __typia_transform__validateReport from "typia/lib/internal/_validateReport.js";
-import typia from "typia";
-export const validateMember = (() => {
-  const _io0 = (input) =>
-    "string" === typeof input.id &&
-    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
-    "string" === typeof input.email &&
-    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
-    "number" === typeof input.age &&
-    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
-    19 < input.age &&
-    input.age <= 100;
-  const _vo0 = (input, _path, _exceptionable = true) =>
-    [
-      ("string" === typeof input.id &&
-        (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
-          $report(_exceptionable, {
-            path: _path + ".id",
-            expected: 'string & Format<"uuid">',
-            value: input.id,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".id",
-          expected: '(string & Format<"uuid">)',
-          value: input.id,
-        }),
-      ("string" === typeof input.email &&
-        (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
-          $report(_exceptionable, {
-            path: _path + ".email",
-            expected: 'string & Format<"email">',
-            value: input.email,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".email",
-          expected: '(string & Format<"email">)',
-          value: input.email,
-        }),
-      ("number" === typeof input.age &&
-        (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: 'number & Type<"uint32">',
-            value: input.age,
-          })) &&
-        (19 < input.age ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & ExclusiveMinimum<19>",
-            value: input.age,
-          })) &&
-        (input.age <= 100 ||
-          $report(_exceptionable, {
-            path: _path + ".age",
-            expected: "number & Maximum<100>",
-            value: input.age,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".age",
-          expected:
-            '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
-          value: input.age,
-        }),
-    ].every((flag) => flag);
-  const __is = (input) =>
-    "object" === typeof input && null !== input && _io0(input);
-  let errors;
-  let $report;
-  return (input) => {
-    if (false === __is(input)) {
-      errors = [];
-      $report = __typia_transform__validateReport._validateReport(errors);
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          $report(true, {
-            path: _path + "",
-            expected: "IMember",
-            value: input,
-          })) &&
-          _vo0(input, _path + "", true)) ||
-        $report(true, {
-          path: _path + "",
-          expected: "IMember",
-          value: input,
-        }))(input, "$input", true);
-      const success = 0 === errors.length;
-      return {
-        success,
-        errors,
-        data: success ? input : undefined,
-      };
-    }
-    return {
-      success: true,
-      errors: [],
-      data: input,
-    };
-  };
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/createValidate.js" 
+      filename="examples/bin/validators/createValidate.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Restrictions
+
 `typia.validate<T>()` function does not check `function` and user-defined `class` types. 
 
 It validates only the primitive properties. Therefore, `typia.validate<T>()` function does not perform the `instanceof ClassName` for user-defined classes. If you want to validate the user-defined class type in addition to the property types, do it by yourself. Also, `typia.validate<T>()` function does not validate the function type either, unless configuring `functional` property of `plugin` option in the `tsconfig.json` file.
@@ -619,37 +235,21 @@ Therefore, the `instanceof` statement does not be used only for the user-defined
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/is-map.ts" showLineNumbers
-import typia from "typia";
-
-typia.createIs<Map<string, boolean | number | string>>();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/validate-map.ts" 
+      filename="examples/src/validators/validate-map.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/is-map.js" showLineNumbers
-import typia from "typia";
-(() => {
-  return (input) =>
-    input instanceof Map &&
-    (() =>
-      [...input].every(
-        (elem) =>
-          Array.isArray(elem) &&
-          elem.length === 2 &&
-          "string" === typeof elem[0] &&
-          ("string" === typeof elem[1] ||
-            "number" === typeof elem[1] ||
-            "boolean" === typeof elem[1]),
-      ))();
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/validate-map.js" 
+      filename="examples/bin/validators/validate-map.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
 ## Discriminated Union
+
 <Tabs items={[
     <code>typia</code>, 
     <code>IValidation.ts</code>,
@@ -707,10 +307,8 @@ if (results.success) {
 }
 ```
 
-
-
-
 ## Customization
+
 You can enhance validation logic by special tags.
 
 Also, with those tags, you can add your custom validation logic, too.
@@ -725,145 +323,21 @@ If you want to know about such special tags detaily, read below article:
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
-```typescript copy filename="examples/src/validate-custom-tags.ts" showLineNumbers
-import typia, { tags } from "typia";
-
-export const validateSomething = typia.createValidate<Something>();
-
-//----
-// DEFINE CUSTOM TYPE TAGS
-//----
-type Dollar = tags.TagBase<{
-  kind: "dollar";
-  target: "string";
-  value: undefined;
-  validate: `$input[0] === "$" && !isNaN(Number($input.substring(1).split(",").join("")))`;
-}>;
-
-type Postfix<Value extends string> = tags.TagBase<{
-  kind: "postfix";
-  target: "string";
-  value: Value;
-  validate: `$input.endsWith("${Value}")`;
-}>;
-
-type IsEven<Value extends number | bigint> = tags.TagBase<{
-  kind: "isEven";
-  target: Value extends number ? "number" : "bigint";
-  value: undefined;
-  validate: `$input % ${Numeric<2>} === ${Numeric<0>}`;
-}>;
-
-type Numeric<Value extends number | bigint> = Value extends number
-  ? Value
-  : `BigInt(${Value})`;
-
-//----
-// VALIDATION
-//----
-interface Something {
-  dollar: string & Dollar;
-  postfix: string & Postfix<"!!!">;
-  isEven: number & IsEven<number>;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/validators/validate-custom-tags.ts" 
+      filename="examples/src/validators/validate-custom-tags.ts" 
+      showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
-```javascript filename="examples/bin/validate-custom-tags.js" showLineNumbers
-import typia from "typia";
-export const validateSomething = (() => {
-  const $io0 = (input) =>
-    "string" === typeof input.dollar &&
-    input.dollar[0] === "$" &&
-    !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
-    "string" === typeof input.postfix &&
-    input.postfix.endsWith("!!!") &&
-    "number" === typeof input.isEven &&
-    input.isEven % 2 === 0;
-  const $vo0 = (input, _path, _exceptionable = true) =>
-    [
-      ("string" === typeof input.dollar &&
-        ((input.dollar[0] === "$" &&
-          !isNaN(Number(input.dollar.substring(1).split(",").join("")))) ||
-          $report(_exceptionable, {
-            path: _path + ".dollar",
-            expected: "string & Dollar",
-            value: input.dollar,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".dollar",
-          expected: "(string & Dollar)",
-          value: input.dollar,
-        }),
-      ("string" === typeof input.postfix &&
-        (input.postfix.endsWith("!!!") ||
-          $report(_exceptionable, {
-            path: _path + ".postfix",
-            expected: 'string & Postfix<"!!!">',
-            value: input.postfix,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".postfix",
-          expected: '(string & Postfix<"!!!">)',
-          value: input.postfix,
-        }),
-      ("number" === typeof input.isEven &&
-        (input.isEven % 2 === 0 ||
-          $report(_exceptionable, {
-            path: _path + ".isEven",
-            expected: "number & IsEven<number>",
-            value: input.isEven,
-          }))) ||
-        $report(_exceptionable, {
-          path: _path + ".isEven",
-          expected: "(number & IsEven<number>)",
-          value: input.isEven,
-        }),
-    ].every((flag) => flag);
-  const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
-  let errors;
-  let $report;
-  return (input) => {
-    if (false === __is(input)) {
-      errors = [];
-      $report = typia.createValidate.report(errors);
-      ((input, _path, _exceptionable = true) =>
-        ((("object" === typeof input && null !== input) ||
-          $report(true, {
-            path: _path + "",
-            expected: "Something",
-            value: input,
-          })) &&
-          $vo0(input, _path + "", true)) ||
-        $report(true, {
-          path: _path + "",
-          expected: "Something",
-          value: input,
-        }))(input, "$input", true);
-      const success = 0 === errors.length;
-      return {
-        success,
-        errors,
-        data: success ? input : undefined,
-      };
-    }
-    return {
-      success: true,
-      errors: [],
-      data: input,
-    };
-  };
-})();
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/validators/validate-custom-tags.js" 
+      filename="examples/bin/validators/validate-custom-tags.js" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
-
-
-
-
 ## Performance
+
 Super-fast and super-safe.
 
 Comparing `typia.validate<T>()` function with other competitive libraries, maximum 20,000x faster. 
